--- a/paper.tex
+++ b/paper.tex
@@ -12,6 +12,7 @@
 % to display URLs in blue roman font according to Springer's eBook style:
 % \renewcommand\UrlFont{\color{blue}\rmfamily}
 
+\usepackage{enumerate}
 \usepackage{marginnote}
 
 \begin{document}
@@ -54,8 +55,22 @@ We took the idea from our SPIRE paper and we made it great, using ZSTD compressi
 \section{State of the Art}
 Review whatever we may have missed from state of the art in prev. papers. Also explain ZSTD and applications. Finally, explain our work-in-progress model for trip representation.
 
+\subsection{A model for compact trip representation}
+So here goes a picture where we have stops $s \in S$, lines $l \in L$ and journeys $j^l \in J^l$. Will possibly redefine to make clear that they are not sets, and then have subindexes like $s_i$ or $j^l_i$.
+
+Users can be attached to trips, but we don't care about them yet.
+
 \section{Proposed Structures}
 \subsection{Common Structures}
+We represent the network like this:
+
+\begin{itemize}
+    \item $lineStop_l(i)$ is the $i$th stop of line $l$
+    \item $stopLine_s(i)$ is the $i$th line that makes a stop at the stop $s$
+    \item $avgTime_l(i)$ is the average time in seconds that it takes for a vehicle of line $l$ to reach its $i$th stop from the start of a journey
+    \item $initialTime_l(i)$ is the starting time of the $i$th journey for line $l$
+\end{itemize}
+
 All boring style except for \texttt{initialTimes}, which is compressed with sampled ZSTD.
 
 \subsection{Matrices}
@@ -65,17 +80,17 @@ Tirso please explain what you did. Did you use bitmaps for partial sums? Matrice
 A user trip can be represented by the stops where the user gets on the transportation system, so from now on we will consider a trip as a sequence of triplets $<s,l,j>$, where $s$, $l$ are, respectively, stop and line identifiers, while $j$ are the journey codes\marginnote{I must explain previously why journeys are codes and not ids} corresponding to the journeys that compose the trip. Additionally, as we are interested in knowing where the trips end, we also represent the last stop where the user got off, which line and journey will logically match the line and journey of the last get-on stop. Although it is generally hard to obtain information about the last destination stop of a trip, many transportation companies are investing effort in providing it, either by implementing systems to keep track of users as they leave their system or estimating it based on previous trips made by that user\marginnote{[CITATION NEEDED]}.
 
 We use three complementary structures to represent each component of the sequence:
-\begin{itemize}
+\begin{enumerate}[(i)]
     \item CSA with special and circular $\$$
     \item lines WM "forest"
     \item jcodes WM
-\end{itemize}
+\end{enumerate}
 
-This construction allows us to answer from x to y with just CSA.
+This construction allows us to answer from x to y with just (i).
 
-Then we can use WM forest to restrict lines.
+Then we can use (ii) to restrict lines.
 
-And finally we can restrict times by finding out the right jcodes.
+And finally we can restrict times by finding out the right jcodes and filtering through (iii).
 
 Theoretically we can answer anything. It's a representation, after all...
 
