--- a/refs.bib
+++ b/refs.bib
@@ -1,3 +1,12 @@
+@inproceedings{rivera2018faster,
+  title={Faster and Smaller Two-Level Index for Network-Based Trajectories},
+  author={Rivera, Rodrigo and Rodr{\'\i}guez, M Andrea and Seco, Diego},
+  booktitle={Proc. 25th International Symposium on String Processing and Information Retrieval (SPIRE)},
+  pages={348--362},
+  year={2018},
+  organization={Springer}
+}
+
 @article{weng2018mining,
   title={Mining urban passengers’ travel patterns from incomplete data with use cases},
   author={Weng, Xiaoxiong and Liu, Yongxin and Song, Houbing and Yao, Shushen and Zhang, Pengfei},
@@ -64,7 +73,7 @@
 @article{bhaskar2015passenger,
   title={Passenger segmentation using smart card data},
   author={Bhaskar, Ashish and Chung, Edward and others},
-  journal={IEEE Transactions on intelligent transportation systems},
+  journal={IEEE Transactions on Intelligent Transportation Systems},
   volume={16},
   number={3},
   pages={1537--1548},
@@ -156,7 +165,7 @@
 @inproceedings{koide2018cinct,
   title={CiNCT: Compression and retrieval for massive vehicular trajectories via relative movement labeling},
   author={Koide, Satoshi and Tadokoro, Yukihiro and Xiao, Chuan and Ishikawa, Yoshiharu},
-  booktitle={2018 IEEE 34th International Conference on Data Engineering (ICDE)},
+  booktitle={Proc. 34th International Conference on Data Engineering (ICDE)},
   pages={1097--1108},
   year={2018},
   organization={IEEE}
@@ -368,7 +377,7 @@
 	xAUTHOR = "A. Fari{\~n}a and N. Brisaboa and G. Navarro and F. Claude
 			   and A. Places and E. Rodr{\'{\i}}guez",
 	title     = {{Word-based Self-Indexes for Natural Language Text}},
-	journal   = {ACM Transactions on Information Systems},
+	journal   = {ACM Transactions on Information Systems (TOIS)},
 	volume    = {30},
 	number    = {1},
 	year      = {2012},
