--- a/paper.tex
+++ b/paper.tex
@@ -59,9 +59,9 @@ We took the idea from our SPIRE paper and we made it great, using ZSTD compressi
 \section{Related works}
 A nice review of all the R-Tree derivatives: \cite{john2017performance}.
 
-Review whatever we may have missed from state of the art in prev. papers \cite{koide2018cinct} and \cite{ding2018ultraman}. For vehicles we also have this \cite{cai2018vector} and \cite{lovell2018lossless}. On contrast, in \cite{al2017semantictraj} we have a very nice example of a text-based trajectory indexing. I need to figure out what the Geodabs thing \cite{chapuis2018geodabs} is all about.
+Review whatever we may have missed from state of the art in prev. papers \cite{koide2018cinct} and \cite{ding2018ultraman}. For vehicles we also have this \cite{cai2018vector} and \cite{lovell2018lossless}. On contrast, in \cite{al2017semantictraj} we have a very nice example of a text-based trajectory indexing. Geodabs is another example of a text-based index that takes the sequence into account using fingerprinting \cite{chapuis2018geodabs}.
 
-Cite Adrian and all that crap. Also send an email to Andrea asking about \cite{rivera2018faster}; I couldn't read it yet as it's paywalled and not available on sci-hub yet!\marginnote{Contact Andrea and Diego!}
+Apart from \cite{koide2018cinct}, in compact data structures there is PAPER ADRIAN\marginnote{We should wait to see if the Journal gets published soon}, which focuses on intersection queries for trajectories in free space, and  \cite{rivera2018faster}, which introduces two bitvectors to efficiently answer time interval queries.
 
 Cite ways of obtaining the data we need, to show that it's possible even though we couldn't get any. You can get a lot of info from smart cards \cite{bhaskar2015passenger}, smart cards + gps \cite{ma2014development}, and even cellphone data \cite{liu2017exploring}. These guys also focus on trajectory reconstruction \cite{tao2014exploring}. These guys \cite{wang2014aggregated} made it so boring that they are probably not worth citing, but I'm keeping them here for now because they separate fridays and types of days, even though we don't care much about that anymore. OR DO WE? To the ones who wonder how do we know the final stops, they figured it out in \cite{alsger2016validating}. Basically what we need is called \textbf{trip-chaining}.
 
@@ -76,9 +76,20 @@ So here goes a picture where we have stops $s_i \in S = \{1,...|S|\}$, lines $l_
 
 Users can be attached to trips, but we don't care about them yet.
 
+\section{Relevant queries}
+\label{seq:rq}
+We are interested in solving two kinds of queries:
+
+\begin{enumerate}[A)]
+    \item Aggregation of passengers
+    \item Movement patterns
+\end{enumerate}
+
 \section{Proposed Structures}
+As of today, we are not aware of any indexing structure that would allow to efficiently represent trajectories that could also support all the kinds of queries described in Section~\ref{seq:rq}. For this reason, we propose two data structures, \acumm and \ctr. The first is targeted for queries of type A, solving most aggregation queries in constant time, while the later can be used for queries of type B.
+
 \subsection{Common Structures}
-We represent the network like this:
+Both \acumm and \ctr need a network representation to be operated, which is represented in the following components:
 
 \begin{itemize}
     \item $lineStop_i(j)$ is the $j$th stop of line $l_i$
