--- a/paper.tex
+++ b/paper.tex
@@ -140,7 +140,7 @@ We use three complementary structures to represent each component of the sequenc
 
 \begin{figure}
 \includegraphics[width=\textwidth]{example_trips.eps}
-\caption{An example of five trips represented on \ctr~(WIP)}
+\caption{An example of five trips represented on \ctr}
 \label{fig:example_ctr}
 \end{figure}
 
