Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -140,7 +140,7 @@ We use three complementary structures to represent each component of the sequenc
     \item A WM of jcodes aligned to the leaves of (ii). Note that this makes this structure dependant on (ii), which is coherent with the fact that journey codes themselves are relative to the line identifier.
 \end{enumerate}
 
-\begin{figure}
+\begin{figure}[hbt!]
 \includegraphics[width=\textwidth]{example_trips.eps}
 \caption{An example of five trips represented on \ctr}
 \label{fig:example_ctr}
